Feb 03, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.9

Feb 02, 2011 - chris ---------------------------------------------------
* added hamsterdb.spec to generate RPM files (thanks, John Gunkel)

Jan 28, 2011 - chris ---------------------------------------------------
o linux 64bit: when having long-running transactions with very big 
    databases (200 GB), and the working set of mmapped memory gets too big,
    mmap will fail and return ENOMEM. In this case, hamsterdb now falls
    back to malloc/read.

Jan 25, 2011 - chris ---------------------------------------------------
o merged bugfix from branch bleeding_edge: on 64bit windows, the remote
    handles returned by the server were broken

Jan 24, 2011 - chris ---------------------------------------------------
o several smaller fixes based on static code analysis

Jan 10, 2011 - chris ---------------------------------------------------
o removed two wrong asserts and improved the fix of Nov 25th

Dec 05, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.8

Dec 03, 2010 - chris ---------------------------------------------------
o configure.in will no longer overwrite -Ox flags; the default 
    compilation option is now -O2 (thanks, Mark)

Nov 30, 2010 - chris ---------------------------------------------------
o bugfix with HAM_DIRECT_ACCESS and cursors which insert duplicates at the
    beginning of the duplicate list; if record size is <= 8 bytes then
    invalid data was returned

Nov 25, 2010 - chris ---------------------------------------------------
o bugfix in transaction handling - in certain cases with long running 
    transactions, a circular reference in a linked list causes an endless
    loop (thanks, Mark)

Oct 31, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.7
