@@ -31,7 +31,7 @@ __undo(ham_log_t *log, log_iterator_t *iter,
         ham_offset_t page_id, ham_u8_t **pdata)
 {
     int i;
-	int found=0;
+    int found=0;
     ham_status_t st=0;
     log_entry_t entry={0};
     ham_u8_t *data=0;
@@ -99,7 +99,7 @@ my_get_aligned_entry_size(ham_size_t data_size)
 {
     ham_size_t s=sizeof(log_entry_t)+data_size;
     s += 8-1;
-	s -= (s % 8);
+    s -= (s % 8);
     return (s);
 }
 
@@ -163,10 +163,10 @@ ham_log_create(mem_allocator_t *alloc, ham_env_t *env, const char *dbpath,
 
     *plog=0;
 
-	ham_assert(env, (0));
+    ham_assert(env, (0));
 
     log_set_allocator(log, alloc);
-	log_set_env(log, env);
+    log_set_env(log, env);
     log_set_lsn(log, 1);
     log_set_flags(log, flags);
     log_set_threshold(log, LOG_DEFAULT_THRESHOLD);
@@ -220,11 +220,12 @@ ham_log_open(mem_allocator_t *alloc, ham_env_t *env, const char *dbpath,
 
     *plog=0;
 
-	ham_assert(env, (0));
+    ham_assert(env, (0));
 
     log_set_allocator(log, alloc);
-	log_set_env(log, env);
+    log_set_env(log, env);
     log_set_flags(log, flags);
+    log_set_threshold(log, LOG_DEFAULT_THRESHOLD);
 
     /* open the two files */
     util_snprintf(filename, sizeof(filename), "%s.log%d", dbpath, 0);
@@ -354,14 +355,14 @@ ham_log_append_txn_begin(ham_log_t *log, struct ham_txn_t *txn)
         txn_set_log_desc(txn, cur);
     }
     else if (log_get_open_txn(log, other)==0) 
-	{
-		/*
-		 * otherwise, if the other file does no longer have open transactions,
-		 * insert a checkpoint, delete the other file and use the other file
-		 * as the current file
-		 */
+    {
+        /*
+         * otherwise, if the other file does no longer have open transactions,
+         * insert a checkpoint, delete the other file and use the other file
+         * as the current file
+         */
 
-		/* checkpoint! */
+        /* checkpoint! */
         st=my_insert_checkpoint(log, txn_get_env(txn));
         if (st)
             return (st);
@@ -425,16 +426,16 @@ ham_log_append_txn_abort(ham_log_t *log, struct ham_txn_t *txn)
 
     st=ham_log_append_entry(log, idx, &entry, sizeof(entry));
 
-	/* 
-	do we need to flush an ABORTED transaction to disc to make it work?
+    /* 
+    do we need to flush an ABORTED transaction to disc to make it work?
 
-	Yes, we do. How would we know for sure the TXN is aborted, otherwise?
-	*/
-	st2 = ham_log_flush(log, idx);
-	if (!st)
+    Yes, we do. How would we know for sure the TXN is aborted, otherwise?
+    */
+    st2 = ham_log_flush(log, idx);
+    if (!st)
         st = st2;
 
-	return st;
+    return st;
 }
 
 ham_status_t
@@ -460,12 +461,12 @@ ham_log_append_txn_commit(ham_log_t *log, struct ham_txn_t *txn)
 
     st=ham_log_append_entry(log, idx, &entry, sizeof(entry));
 
-	/* 
-	we MUST flush a COMMITTED transaction to disc to make it work in recovery,
-	else we risk an incomplete log file while the commit came through.
-	*/
-	st2 = ham_log_flush(log, idx);
-	if (st == 0)
+    /* 
+    we MUST flush a COMMITTED transaction to disc to make it work in recovery,
+    else we risk an incomplete log file while the commit came through.
+    */
+    st2 = ham_log_flush(log, idx);
+    if (st == 0)
         st = st2;
 
     return st;
@@ -500,14 +501,14 @@ ham_log_append_flush_page(ham_log_t *log, struct ham_page_t *page)
     ham_status_t st;
     log_entry_t entry;
 
-	ham_env_t *env = device_get_env(page_get_device(page));
-	ham_assert(page_is_dirty(page), (0));
+    ham_env_t *env = device_get_env(page_get_device(page));
+    ham_assert(page_is_dirty(page), (0));
 
-	/* make sure that this is never called during a checkpoint! */
+    /* make sure that this is never called during a checkpoint! */
     ham_assert(!(log_get_state(log)&LOG_STATE_CHECKPOINT), (0));
     
-	ham_assert(page_get_device(page), (0));
-	ham_assert(device_get_env(page_get_device(page)), (0));
+    ham_assert(page_get_device(page), (0));
+    ham_assert(device_get_env(page_get_device(page)), (0));
 
     /* write the header */
     memset(&entry, 0, sizeof(entry));
@@ -523,7 +524,7 @@ ham_log_append_flush_page(ham_log_t *log, struct ham_page_t *page)
     if (st)
         return (st);
 
-	st = ham_log_flush(log, fdidx);
+    st = ham_log_flush(log, fdidx);
 
     return st;
 }
@@ -665,7 +666,7 @@ ham_log_get_entry(ham_log_t *log, log_iterator_t *iter, log_entry_t *entry,
     if (log_entry_get_data_size(entry)) {
         ham_offset_t pos=iter->_offset-log_entry_get_data_size(entry);
         // pos += 8-1;
-		pos -= (pos % 8);
+        pos -= (pos % 8);
 
         *data=allocator_alloc(log_get_allocator(log), 
                         (ham_size_t)log_entry_get_data_size(entry));
@@ -692,7 +693,7 @@ ham_status_t
 ham_log_close(ham_log_t *log, ham_bool_t noclear)
 {
     ham_status_t st = 0; 
-	ham_status_t st2 = 0; 
+    ham_status_t st2 = 0; 
     int i;
 
     if (!noclear) {
@@ -717,7 +718,7 @@ ham_log_close(ham_log_t *log, ham_bool_t noclear)
         log_set_overwrite_size(log, 0);
     }
     allocator_free(log_get_allocator(log), log);
-	return st2;
+    return st2;
 }
 
 ham_status_t
@@ -842,10 +843,10 @@ ham_log_recover(ham_log_t *log, ham_device_t *device, ham_env_t *env)
     ham_u64_t *txn_list=0;
     log_flush_entry_t *flush_list=0;
     ham_size_t txn_list_size=0;
-	ham_size_t flush_list_size=0;
-	ham_size_t i;
+    ham_size_t flush_list_size=0;
+    ham_size_t i;
     ham_bool_t committed;
-	ham_bool_t flushed;
+    ham_bool_t flushed;
 
     memset(&iter, 0, sizeof(iter));
 
@@ -882,11 +883,11 @@ ham_log_recover(ham_log_t *log, ham_device_t *device, ham_env_t *env)
              * redo if committed and not flushed */
             case LOG_ENTRY_TYPE_WRITE:
                 /* 
-				check if this page was flushed at a later time within 
-				the same log section (up to the next checkpoint): we're 
-				walking BACKWARDS in time here and we must only restore
-				the LATEST state.
-				*/
+                check if this page was flushed at a later time within 
+                the same log section (up to the next checkpoint): we're 
+                walking BACKWARDS in time here and we must only restore
+                the LATEST state.
+                */
                 flushed=0;
                 for (i=0; i<flush_list_size; i++) {
                     if (flush_list[i].page_id==log_entry_get_offset(&entry)
@@ -997,7 +998,7 @@ ham_log_recreate(ham_log_t *log, ham_page_t *page)
     ham_status_t st;
     log_iterator_t iter;
     ham_u8_t *data;
-	ham_env_t *env=device_get_env(page_get_device(page));
+    ham_env_t *env=device_get_env(page_get_device(page));
 
     memset(&iter, 0, sizeof(iter));
 
@@ -1007,8 +1008,8 @@ ham_log_recreate(ham_log_t *log, ham_page_t *page)
 
     memcpy(page_get_raw_payload(page), data, env_get_pagesize(env));
     allocator_free(log_get_allocator(log), data);
-	/* make sure the old data will be flushed to disk, later on */
-	ham_assert(page_is_dirty(page), (0));
+    /* make sure the old data will be flushed to disk, later on */
+    ham_assert(page_is_dirty(page), (0));
 
     return (0);
 }
@@ -1016,37 +1017,37 @@ ham_log_recreate(ham_log_t *log, ham_page_t *page)
 void
 ham_log_mark_db_expansion_start(ham_env_t *env)
 {
-	ham_log_t *log = env_get_log(env);
+    ham_log_t *log = env_get_log(env);
 
-	if (!log)
-		return;
+    if (!log)
+        return;
 
-	log_set_state(log, log_get_state(log) | LOG_STATE_DB_EXPANSION);
+    log_set_state(log, log_get_state(log) | LOG_STATE_DB_EXPANSION);
 
-	return;
+    return;
 }
 
 void
 ham_log_mark_db_expansion_end(ham_env_t *env)
 {
-	ham_log_t *log = env_get_log(env);
+    ham_log_t *log = env_get_log(env);
 
-	if (!log)
-		return;
+    if (!log)
+        return;
 
-	ham_assert( 0 != (log_get_state(log) & LOG_STATE_DB_EXPANSION), (0));
-	log_set_state(log, log_get_state(log) & ~LOG_STATE_DB_EXPANSION);
+    ham_assert( 0 != (log_get_state(log) & LOG_STATE_DB_EXPANSION), (0));
+    log_set_state(log, log_get_state(log) & ~LOG_STATE_DB_EXPANSION);
 
-	return;
+    return;
 }
 
 ham_bool_t
 ham_log_is_db_expansion(ham_env_t *env)
 {
-	ham_log_t *log = env_get_log(env);
+    ham_log_t *log = env_get_log(env);
 
-	if (!log)
-		return HAM_FALSE;
+    if (!log)
+        return HAM_FALSE;
 
-	return 0 != (log_get_state(log) & LOG_STATE_DB_EXPANSION);
+    return 0 != (log_get_state(log) & LOG_STATE_DB_EXPANSION);
 }
